# My_Projects

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.ps1
code-scanner/: README.md  setup.ps1  setup.sh
code-scanner/codescanner/: engine.py
code-scanner/example_project/: package.json
codescanner/: main.py
codescanner_security.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
example_project/: app.py  test.js
projects/code-scanner/: .gitignore  DESIGN.md  setup.sh
projects/code-scanner/codescanner/: styles.py
