[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "codescanner-security"
version = "0.2.1"
description = "Language-agnostic Supply Chain Security & Reachability Analysis"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "requests>=2.28.0"
]

[project.scripts]
codescanner = "codescanner.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["codescanner*"]
